yaml-applications/dev-admin-api/dev-admin-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plannify-dev-admin-api
  name: plannify-dev-admin-api
  namespace: plannify-dev
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: plannify-dev-admin-api
  template:
    metadata:
      labels:
        app: plannify-dev-admin-api
    spec:
      containers:
        - image: ghcr.io/plannify-truck-driver-app/admin-api:0.0.1-dev.47
          name: plannify-dev-admin-api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "4m"
              memory: "8Mi"
            limits:
              cpu: "16m"
              memory: "24Mi"
          ports:
            - containerPort: 3000
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: plannify-dev-admin-api
  namespace: plannify-dev
spec:
  type: ClusterIP
  selector:
    app: plannify-dev-admin-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plannify-dev-admin-api
  namespace: plannify-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-plannify-dev
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/rewrite-target: /
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: api-dev.plannify.be
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: plannify-dev-admin-api
                port:
                  number: 80
  tls:
    - hosts:
        - api-dev.plannify.be
      secretName: dev-api-plannify-be-tls
